<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground"
    tools:ignore="ContentDescription" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:includeFontPadding="false"
        android:padding="8dp"
        android:ellipsize="end"
        android:gravity="center_vertical|center_horizontal"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <View
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/colorButtonNormal" />

    <LinearLayout
            android:id="@+id/menu_refresh"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:minHeight="46dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:src="@drawable/icon_refresh" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:includeFontPadding="false"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/refresh"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="?android:attr/textColorPrimary" />

        </LinearLayout>

    <LinearLayout
            android:id="@+id/menu_quit"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:minHeight="46dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:src="@drawable/icon_exit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:includeFontPadding="false"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/quit"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="?android:attr/textColorPrimary" />

        </LinearLayout>

    <LinearLayout
            android:id="@+id/menu_settings"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:minHeight="46dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:src="@drawable/icon_settings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:includeFontPadding="false"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/setting"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="?android:attr/textColorPrimary" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_close"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:minHeight="46dp"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_gravity=""
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:src="@drawable/icon_close" />
    </LinearLayout>

</LinearLayout>